@@ -1,5 +1,10 @@
 2009-09-18  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* include/functions_html.php: add second parameter for trace a log in server
+	file (plain text).
+
+2009-09-18  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* godmode/agentes/module_manager.php: add checkbox to multiple delete
 	modules in agent managent. And add class style css for disabled modules.
 	* include/styles/pandora_minimal.css, include/styles/pandora_red.css,
